Fix issues with graph overlapping summary

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -56,6 +56,7 @@ main {
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 #main-app {
@@ -70,9 +71,4 @@ main {
 body, html {
   width: 100%;
   height: 100%;
-}
-
-body {
-  display: flex;
-  flex-direction: column;
 }
